// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthWall> renders a message for unauthorized users 1`] = `
<FullscreenError
  message="You are not authorized"
/>
`;

exports[`<AuthWall> renders a spinner when loading 1`] = `
<AbsoluteCenter
  vertical={true}
>
  <CircularLoader />
  Checking permissions
</AbsoluteCenter>
`;

exports[`<AuthWall> renders errors if they occur 1`] = `
<FullscreenError
  message="Something went wrong"
/>
`;

exports[`<AuthWall> renders the children for authorized users 1`] = `
<Fragment>
  Children
</Fragment>
`;
